uploading my portfolio website

--- a/index.html
+++ b/index.html
@@ -86,36 +86,9 @@
     </div>
 
     <!-- Footer Section -->
-    <footer class="bg-dark text-white py-4 mt-5 footer-hidden">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-md-4 pt-5">
-                    <h5>Contact Info</h5>
-                    <p class="h4 pt-2">Gokul Falke.</p>
-                    <p><i class="bi bi-envelope-fill"></i> gokulfalke17@gmail.com</p>
-                    <p><i class="bi bi-phone-fill"></i> +91-7350925310</p>
-                </div>
-                <div class="col-md-4 pt-5">
-                    <h5 class="pt-2">Connect with Me</h5>
-                    <a href="https://github.com/yourprofile" target="_blank"><i
-                            class="bi bi-github text-light mx-2 h4"></i></a>
-                    <a href="https://www.instagram.com/xx_gokulfalke17/" target="_blank"><i
-                            class="bi bi-instagram text-light mx-2 h4"></i></a>
-                    <a href="https://www.linkedin.com/in/gokul-falke-046a7824a/" target="_blank"><i
-                            class="bi bi-linkedin text-light mx-2 h4"></i></a>
-                    <a href="https://x.com/GokulFalke17" target="_blank"><i
-                            class="bi bi-twitter text-light mx-2 h4"></i></a>
-                </div>
-                <div class="col-md-4 pt-5">
-                    <h5>Quick Links</h5>
-                    <p><a href="#home" class="hover-property text-decoration-none text-white h5">Home</a></p>
-                    <p><a href="#about" class=" hover-property text-decoration-none text-white h5">About</a></p>
-                    <p><a href="#projects" class=" hover-property text-decoration-none text-white h5">Projects</a></p>
-                    <p><a href="#contact" class=" hover-property text-decoration-none text-white h5">Contact</a></p>
-                </div>
-            </div>
-            <hr class="bg-light">
-            <p class="mb-0">&copy; 2024 Gokul Falke. All Rights Reserved.</p>
+    <footer class="text-white py-4 mt-5  footer-hidden">
+            <hr class="bg-light mt-5 pt-1">
+            <p class="mb-0 text-center">&copy; 2024 Gokul Falke. All Rights Reserved.</p>
         </div>
     </footer>
 
