--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                     <ul class="list-unstyled text-light">
                         <li><strong class="text-danger">Name:</strong> Gokul Falke</li>
                         <li><strong class="text-danger">Location:</strong> Tal. Jamkhed Dist. Ahmednagar,<b> Maharashtra</b></li>
-                        <li><strong class="text-danger">Email:</strong> gokulfalke17@example.com</li>
+                        <li><strong class="text-danger">Email:</strong> gokulfalke17@gmail.com</li>
                         <li><strong class="text-danger">Phone:</strong> +91-7350925310</li>
                     </ul>
                     <h5 class="pt-5 text-info">Hobbies</h5>
