--- a/projects.html
+++ b/projects.html
@@ -223,7 +223,7 @@
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="project-card shadow-lg" data-aos="fade-up" data-aos-delay="400">
-                        <img src="./imgs/cake.avif" alt="Project 2" class="img-fluid project-img">
+                        <img src="./imgs/cake.jpg" alt="Project 2" class="img-fluid project-img">
                         <div class="project-info p-3">
                             <h4 class="project-title">Project Title 2</h4>
                             <p class="project-description">A brief description of the project goes here. This one is
@@ -291,7 +291,7 @@
                     <!-- Project 2 -->
                     <div class="col-lg-4 col-md-6">
                         <div class="project-card shadow-lg" data-aos="fade-up" data-aos-delay="400">
-                            <img src="./imgs/cake.avif" alt="Project 2" class="img-fluid project-img">
+                            <img src="./imgs/cake.jpg" alt="Project 2" class="img-fluid project-img">
                             <div class="project-info p-3">
                                 <h4 class="project-title">Project Title 2</h4>
                                 <p class="project-description">A brief description of the project goes here. This one is
